--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,4 @@
+
 github:
   prebuilds:
     # enable for the master/default branch (defaults to true)
@@ -14,3 +15,7 @@ github:
     addBadge: false
     # add a label once the prebuild is ready to pull requests (defaults to false)
     addLabel: prebuilt-in-gitpod
+
+vscode:
+  extensions:
+    - WakaTime.vscode-wakatime
